app-a/k8s/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a-deployment
  labels:
    app: app-a

spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-a
  template:
    metadata:
      labels:
        app: app-a
    spec:
      containers:
        - name: app-a
          image: app-a-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /up
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: app-a-service
  labels:
    app: app-a
spec:
  # type: LoadBalancer # NodePort if you want to access it via NodePort # LoadBalancer for cloud environments # ClusterIP for internal access only
  selector:
    app: app-a
  ports:
    - protocol: TCP
      port: 7070
      targetPort: 80
