app-a/k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgressql-db
  labels:
    app: postgressql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgressql-db
  template:
    metadata:
      labels:
        app: postgressql-db
    spec:
      containers:
        - name: postgressql-db
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            # Mount the PVC into the path postgres uses to store data
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        # Connect the PVC to this pod
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgressql-db
  labels:
    app: postgressql-db
spec:
  type: ClusterIP
  selector:
    app: postgressql-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
