app-a/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-a-ingress
  labels:
    app: app-a
spec:
  ingressClassName: nginx
  rules:
    - host: devops-app-a.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-a-service
                port:
                  number: 7070

    - host: devops-app-b.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-a-service
                port:
                  number: 7070
